aks-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryuzd2793.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
          name: trips
