aks-tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryuzd2793.azurecr.io/tripinsights/tripviewer:1.0
        ports:
        - containerPort: 80
          name: tripviewer
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
