aks-userjava.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryuzd2793.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
          name: user-java
