aks-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryuzd2793.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 80
          name: userprofile
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
