aks-svc-poi.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi
spec:
  selector:
    app: poi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
