aks-svc-tripviewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
spec:
  selector:
    app: tripviewer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
