aks-svc-userprofile.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile
spec:
  selector:
    app: userprofile
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
